--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.10.0",
+    "postgraphile": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.15"
   }
